--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/sanskrit-documentation-theme-hugo"]
 	path = themes/sanskrit-documentation-theme-hugo
-	url = git@github.com:sanskrit-coders/sanskrit-documentation-theme-hugo.git
+	url = https://github.com/sanskrit-coders/sanskrit-documentation-theme-hugo.git
