--- a/data/sidebars/paganology_sidebar.yml
+++ b/data/sidebars/paganology_sidebar.yml
@@ -47,3 +47,7 @@ contents:
             url: /paganology/japan/geopolitics/secure-north.md
           - title: Anti-leukosphere
             url: /paganology/japan/geopolitics/anti-leukosphere.md
+  - title: Hindutva
+    url: /main/hinduism/introduction/
+  - title: Home
+    url: /
