--- a/wercker.yml
+++ b/wercker.yml
@@ -29,7 +29,7 @@ deploy:
     - add-ssh-key:
         keyname: github_key
         host: github.com
-    - sf-zhou/gh-pages:
+    - sf-zhou/gh-pages@0.2.6:
         token: $GIT_TOKEN
         basedir: docs
         branch: master
