--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "hindu-vichArAH हिन्दु-विचाराः"
 theme = "sanskrit-documentation-theme-hugo"
 publishDir = "docs"
 [params]
-  githubEditMePathBase = "https://github.com/hindutva/hindutva.github.io/edit/master/content/"
+  githubEditMePathBase = "https://github.com/hindutva/hindutva.github.io/edit/hugo-source/content/"
   contactLink = "https://github.com/hindutva/hindutva.github.io/issues/new"
   env = "production"
   disqusShortcode = "hindu-vichaarah"
