--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -3,8 +3,8 @@
 title: Parts
 contents:
   - title: Hindutvam
-    url: /main/hinduism/introduction/
+    url: /main/hinduism/
   - title: Paganology
-    url: /paganology/introduction/
+    url: /paganology/
   - title: Contributing
     url: /contributing/
