--- a/data/sidebars/paganology_sidebar.yml
+++ b/data/sidebars/paganology_sidebar.yml
@@ -11,6 +11,9 @@ contents:
   - title: China
     contents:
       - url: dir://paganology/china/
+  - title: Persia
+    contents:
+      - url: dir://paganology/persia/
   - title: Japan
     contents:
       - title: Intro
