--- a/data/sidebars/paganology_sidebar.yml
+++ b/data/sidebars/paganology_sidebar.yml
@@ -14,12 +14,11 @@ contents:
   - title: Persia
     contents:
       - url: dir://paganology/persia/
+  - title: Mediterranian
+    contents:
+      - url: dir://paganology/mediterranian/
   - title: Japan
     contents:
-      - title: Intro
-        url: /paganology/japan/
-      - title: Spirituality
-        url: /paganology/japan/spirituality.md
       - title: kokutai National spirit
         contents:
           - url: dir://paganology/japan/kokutai/
