--- a/data/sidebars/paganology_sidebar.yml
+++ b/data/sidebars/paganology_sidebar.yml
@@ -7,7 +7,8 @@ contents:
     contents:
       - url: dir://paganology/steppe/
       - title: Religion
-        - url: dir://paganology/steppe/religions/
+        contents:
+          - url: dir://paganology/steppe/religions/
   - title: North Europe
     url: /paganology/north-europe.md
   - title: China
