--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -8,3 +8,5 @@ contents:
     url: /paganology/
   - title: Contributing
     url: /contributing/
+  - title: Donate!
+    url: /donate-via-hindutva/
