--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -9,4 +9,4 @@ contents:
   - title: Contributing
     url: /contributing/
   - title: Donate!
-    url: /donate-via-hindutva/
+    url: /dharma-via-hindutva/
