--- a/data/sidebars/paganology_sidebar.yml
+++ b/data/sidebars/paganology_sidebar.yml
@@ -33,5 +33,5 @@ contents:
     url: /main/hinduism/introduction/
   - title: Home
     url: /
-  - title: Donate!
+  - title: <i class="fas fa-hand-holding-heart"></i>Donate!
     url: /dharma-via-hindutva/
