--- a/data/sidebars/hindutvam_sidebar.yml
+++ b/data/sidebars/hindutvam_sidebar.yml
@@ -164,5 +164,5 @@ contents:
     url: /paganology/
   - title: Home
     url: /
-  - title: Donate!
+  - title: <i class="fas fa-hand-holding-heart"></i>Donate!
     url: /dharma-via-hindutva/
