--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -8,5 +8,5 @@ contents:
     url: /paganology/
   - title: Contributing
     url: /contributing/
-  - title: Donate!
+  - title: <i class="fas fa-hand-holding-heart"></i>Donate!
     url: /dharma-via-hindutva/
