--- a/data/sidebars/hindutvam_sidebar.yml
+++ b/data/sidebars/hindutvam_sidebar.yml
@@ -86,7 +86,7 @@ contents:
           url: /main/rivals/0-theism/secularism.md
       - title: "Dubious bAba-isms"
         contents:
-          - url: /main/rivals/dubious-bAbaisms/
+          - url: dir://main/rivals/dubious-bAbaisms/
       - title: Idiot Intellectualism
         contents:
           - url: dir://main/rivals/iyi/
