--- a/data/sidebars/hindutvam_sidebar.yml
+++ b/data/sidebars/hindutvam_sidebar.yml
@@ -55,6 +55,9 @@ contents:
         contents:
           - url: dir://main/social-cultivation/dharma
       - url: dir://main/social-cultivation/
+      - title: Violence
+        contents:
+          - url: dir://main/social-cultivation/violence
       - title: Caste, Clan जातिः वर्णः च
         contents:
           - url: dir://main/social-cultivation/clan/
