--- a/data/sidebars/paganology_sidebar.yml
+++ b/data/sidebars/paganology_sidebar.yml
@@ -23,6 +23,9 @@ contents:
   - title: Mediterranian
     contents:
       - url: dir://paganology/mediterranian/
+      - title: Egypt
+        contents:
+          - url: dir://paganology/mediterranian/old-egypt/
       - title: Philosophy
         contents:
           - url: dir://paganology/mediterranian/philosophy/
