--- a/config.toml
+++ b/config.toml
@@ -4,8 +4,12 @@ title = "hindu-vichArAH हिन्दु-विचाराः"
 theme = "sanskrit-documentation-theme-hugo"
 publishDir = "build_github"
 disablePathToLower = true
+
 [params]
   githubEditMePathBase = "https://github.com/hindutva/hindutva.github.io/edit/hugo-source/content/"
   contactLink = "https://github.com/hindutva/hindutva.github.io/issues/new"
   env = "production"
   disqusShortcode = "hindu-vichaarah"
+
+[markup.goldmark.renderer]
+  unsafe= true
