--- a/data/sidebars/paganology_sidebar.yml
+++ b/data/sidebars/paganology_sidebar.yml
@@ -2,48 +2,7 @@
 
 title: Paganology
 contents:
-  - url: dir://paganology/
-  - title: Steppe
-    contents:
-      - url: dir://paganology/steppe/
-      - title: Religion
-        contents:
-          - url: dir://paganology/steppe/religions/
-  - title: North Europe
-    url: /paganology/north-europe.md
-  - title: China
-    contents:
-      - url: dir://paganology/china/
-  - title: Persia
-    contents:
-      - url: dir://paganology/persia/
-      - title: Religion
-        contents:
-          - url: dir://paganology/persia/religion/
-  - title: Mediterranian
-    contents:
-      - url: dir://paganology/mediterranian/
-      - title: Egypt
-        contents:
-          - url: dir://paganology/mediterranian/old-egypt/
-      - title: Philosophy
-        contents:
-          - url: dir://paganology/mediterranian/philosophy/
-          - title: Platonism
-            contents:
-              - url: dir://paganology/mediterranian/philosophy/platonism/
-  - title: Japan
-    contents:
-      - title: kokutai National spirit
-        contents:
-          - url: dir://paganology/japan/kokutai/
-      - title: Geopolitics
-        contents:
-          - url: dir://paganology/japan/geopolitics/
-      - title: Spirituality
-        contents:
-          - url: dir://paganology/japan/spirituality/
-      - url: dir://paganology/japan/
+  - url: recdir://paganology/
   - title: Hindutva
     url: /main/hinduism/introduction/
   - title: Home
