--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-github: vvasuki # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
+custom: ["https://hindutva.github.io/dharma-via-hindutva/", hindutva.github.io/dharma-via-hindutva/]
