--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ["https://hindutva.github.io/dharma-via-hindutva/", hindutva.github.io/dharma-via-hindutva/]
+custom: ["https://hindutva.github.io/dharma-via-hindutva/"]
