--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -7,7 +7,7 @@ contents:
   - title: Paganology
     url: /paganology/
   - title: Become Hindu!
-    url: /join/
+    url: https://become-hindu.github.io/
   - title: Contributing
     url: /contributing/
   - title: <i class="fas fa-hand-holding-heart"></i>Donate!
